pong-app/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-app
  namespace: dwk-mooc
  labels:
    app: pong-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong-app
  template:
    metadata:
      labels:
        app: pong-app
    spec:
      containers:
        - name: pong-app
          image: forge.fudwin.xyz:8443/sami/dwk-pong-app:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: shared-volume
              mountPath: /data
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: log-pong-pvc
