pong-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong-app-svc
  namespace: dwk-mooc
spec:
  type: ClusterIP
  selector:
    app: pong-app
  ports:
    - port: 4000
      protocol: TCP
      targetPort: 8080
